--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,4 @@
-h1,
-p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.site-app{
+  margin: 0 auto;
+   width: 97%;
 }
